Remove obsolete comment from Hudi S3 query runner